--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,9 @@ output:
   md_document:
     variant: markdown_github
 ---
+[![Travis-CI Build Status](https://travis-ci.org/mdsumner/ffraster.svg?branch=master)](https://travis-ci.org/mdsumner/ffraster)
+[![](http://www.r-pkg.org/badges/version/ffraster)](http://www.r-pkg.org/pkg/ffraster)
+[![](http://cranlogs.r-pkg.org/badges/ffraster)](http://www.r-pkg.org/pkg/ffraster)
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
