--- a/README.Rmd
+++ b/README.Rmd
@@ -5,9 +5,9 @@ output: github_document
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 
-[![Travis-CI Build Status](https://travis-ci.org/mdsumner/ffraster.svg?branch=master)](https://travis-ci.org/mdsumner/ffraster)
+[![Travis-CI Build Status](https://travis-ci.org/hypertidy/ffraster.svg?branch=master)](https://travis-ci.org/hypertidy/ffraster)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/mdsumner/ffraster?branch=master&svg=true)](https://ci.appveyor.com/project/mdsumner/ffraster)
-[![Coverage Status](https://img.shields.io/codecov/c/github/mdsumner/ffraster/master.svg)](https://codecov.io/github/mdsumner/ffraster?branch=master)
+[![Coverage Status](https://img.shields.io/codecov/c/github/hypertidy/ffraster/master.svg)](https://codecov.io/github/hypertidy/ffraster?branch=master)
 
 
 ```{r, echo = FALSE}
